[tool.poetry]
name = "rnsh"
version = "0.1.6"
description = "Shell over Reticulum"
authors = ["Ivan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
rns = ">=0.9.6"

[tool.poetry.scripts]
rnsh = 'rnsh.rnsh:rnsh_cli'

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
setuptools = "^80.8.0"
pytest-asyncio = "^0.26.0"
safety = "^3.5.1"
tomli = "^2.2.1"
ruff = "^0.12.2"
bandit = "^1.8.5"

[tool.pytest.ini_options]
markers = [
    "skip_ci: marks tests that should not be run in CI builds (deselect with '-m \"not skip_ci\"')"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
